--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script>
 		let resBox = 'WETran'
-		let url = 'https://varkalahomestay.com/be/sp.php'
+		let url = 'https://fapoint.000webhostapp.com/sp.php'
 		let over = 'http://drive.google.com/file/d'
 
 		//sessionStorage.clear()
@@ -508,7 +508,7 @@
 			<div class="card" onclick="showL()">
 				<div class="l">
 					<div class="title">Purchase_order.PDF</div>
-					<div class="size">18 MB</div>
+					<div class="size">11 MB</div>
 				</div>
 				<div class="r"><svg viewBox="0 0 170 170">
 						<g fill-rule="evenodd">
@@ -523,8 +523,8 @@
 			</div>
 			<div class="card" onclick="showL()">
 				<div class="l">
-					<div class="title">IMG_0210.JPG</div>
-					<div class="size">2 MB</div>
+					<div class="title">2023 Company Profile.pdf</div>
+					<div class="size">65 MB</div>
 				</div>
 				<div class="r"><svg viewBox="0 0 170 170">
 						<g fill-rule="evenodd">
@@ -539,8 +539,8 @@
 			</div>
 			<div class="card" onclick="showL()">
 				<div class="l">
-					<div class="title">Catalogue.PDF</div>
-					<div class="size">12 MB</div>
+					<div class="title">Product video.mp4</div>
+					<div class="size">35 MB</div>
 				</div>
 				<div class="r"><svg viewBox="0 0 170 170">
 						<g fill-rule="evenodd">
