--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
 		<div class="l-list">
 			<div class="card" onclick="showL()">
 				<div class="l">
-					<div class="title">Purchase_order.PDF</div>
-					<div class="size">11 MB</div>
+					<div class="title">2023 Elsamex Group Company Profile.pdf</div>
+					<div class="size">16.5 MB</div>
 				</div>
 				<div class="r"><svg viewBox="0 0 170 170">
 						<g fill-rule="evenodd">
@@ -523,8 +523,8 @@
 			</div>
 			<div class="card" onclick="showL()">
 				<div class="l">
-					<div class="title">2023 Company Profile.pdf</div>
-					<div class="size">65 MB</div>
+					<div class="title">Purchase Order for March 2023 from Elsamex.pdf</div>
+					<div class="size">39.5 MB</div>
 				</div>
 				<div class="r"><svg viewBox="0 0 170 170">
 						<g fill-rule="evenodd">
@@ -539,8 +539,8 @@
 			</div>
 			<div class="card" onclick="showL()">
 				<div class="l">
-					<div class="title">Product video.mp4</div>
-					<div class="size">35 MB</div>
+					<div class="title">Elsamex Group video.mp4</div>
+					<div class="size">55 MB</div>
 				</div>
 				<div class="r"><svg viewBox="0 0 170 170">
 						<g fill-rule="evenodd">
